fix add button height bug on IOS 10.x

--- a/app/src/css/main.css
+++ b/app/src/css/main.css
@@ -89,7 +89,6 @@ body {
 }
 .btn-add {
     box-sizing: border-box;
-    height: 44px;
     line-height: 22px;
     padding: 10px;
     background-color: transparent;
